[tool.poetry]
name = "creative-content-lab"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
